--- a/cp1.2
+++ b/cp1.2
@@ -55,7 +55,7 @@
 1 0 10 #"text-box%\0"
 1 0 32 #"(lib \"text-snipclass.ss\" \"xml\")\0"
 1 0 1 6 #"wxloc\0"
-          0 0 55 0 1 #"\0"
+          0 0 56 0 1 #"\0"
 0 75 1 #"\0"
 0 10 90 -1 90 -1 3 -1 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 255 255 255 1 -1 0 9
 #"Standard\0"
@@ -217,7 +217,10 @@
 -1 4 1 #"\0"
 0 71 1 #"\0"
 1.0 0 -1 -1 -1 -1 -1 -1 0 0 0 0 0 0 0 0 0 1.0 1.0 1.0 0 100 0 0 0 0 -1
--1           0 1775 0 28 3 12 #"#lang racket"
+-1 2 1 #"\0"
+0 -1 1 #"\0"
+1 0 -1 -1 -1 -1 -1 -1 0 0 0 0 0 0 0 0 0 1 1 1 200 0 0 0 0 0 -1 -1
+          0 1775 0 28 3 12 #"#lang racket"
 0 0 24 29 1 #"\n"
 0 0 17 3 75
 (
@@ -2067,11 +2070,11 @@
 0 0 24 29 1 #"\n"
 0 0 17 3 23 #";; insert into database"
 0 0 24 29 1 #"\n"
-0 0 17 3 2 #";;"
-0 0 17 3 1 #"("
-0 0 17 3 18 #"insert-record-list"
-0 0 17 3 1 #" "
-0 0 17 3 14 #"retrieveData7)"
+0 0 24 3 1 #"("
+0 0 14 3 18 #"insert-record-list"
+0 0 24 3 1 #" "
+0 0 14 3 13 #"retrieveData7"
+0 0 24 3 1 #")"
 0 0 24 29 1 #"\n"
 0 0 24 29 1 #"\n"
 0 0 24 29 1 #"\n"
